--- a/app/src/main/res/layout/item_warning.xml
+++ b/app/src/main/res/layout/item_warning.xml
@@ -1,9 +1,9 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="#4CAF50"
-    android:orientation="vertical"
-    android:padding="8dp">
+    android:background="@drawable/rounded_background"
+    android:padding="12dp"
+    android:orientation="vertical">
 
     <TextView
         android:id="@+id/text_type"
@@ -35,3 +35,4 @@
         android:layout_height="wrap_content"
         android:text="End Time: " />
 </LinearLayout>
+
