--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -1,113 +1,251 @@
-<?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
-
+    android:layout_height="wrap_content"
+    android:background="#121212">
 
     <LinearLayout
+        android:id="@+id/linearLayout"
         android:layout_width="match_parent"
         android:layout_height="80dp"
-        android:orientation="horizontal"
         android:layout_alignParentBottom="true"
         android:background="#333333"
+        android:orientation="horizontal"
         android:padding="10dp"
         android:weightSum="3">
 
-    <!-- Botão Home com Label -->
-    <LinearLayout
-        android:layout_width="0dp"
-        android:layout_height="match_parent"
-        android:layout_weight="1"
-        android:orientation="vertical"
-        android:gravity="center"
-        android:padding="5dp">
-
-        <ImageButton
-            android:id="@+id/button_home"
-            android:layout_width="wrap_content"
-            android:layout_height="0dp"
+        <!-- Botão Home com Label -->
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
             android:layout_weight="1"
-            android:src="@drawable/ic_home"
-            android:background="?android:attr/selectableItemBackground"
-            android:contentDescription="Home"
-            android:tint="#FFFFFF"
-            android:scaleType="fitCenter"/>
-
-        <TextView
-            android:id="@+id/text_home"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Home"
-            android:textColor="#FFFFFF"
-            android:textSize="12sp"
             android:gravity="center"
-            android:layout_marginTop="4dp" />
-    </LinearLayout>
+            android:orientation="vertical"
+            android:padding="5dp">
 
-    <!-- Botão Notificações com Label -->
-    <LinearLayout
-        android:layout_width="0dp"
-        android:layout_height="match_parent"
-        android:layout_weight="1"
-        android:orientation="vertical"
-        android:gravity="center"
-        android:padding="5dp">
+            <ImageButton
+                android:id="@+id/button_home"
+                android:layout_width="wrap_content"
+                android:layout_height="0dp"
+                android:layout_weight="1"
+                android:background="?android:attr/selectableItemBackground"
+                android:contentDescription="Home"
+                android:scaleType="fitCenter"
+                android:src="@drawable/ic_home"
+                android:tint="#FFFFFF" />
 
-        <ImageButton
-            android:id="@+id/button_notifications"
-            android:layout_width="wrap_content"
-            android:layout_height="0dp"
+            <TextView
+                android:id="@+id/text_home"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="4dp"
+                android:gravity="center"
+                android:text="Home"
+                android:textColor="#FFFFFF"
+                android:textSize="12sp" />
+        </LinearLayout>
+
+        <!-- Botão Notificações com Label -->
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
             android:layout_weight="1"
-            android:src="@drawable/ic_notifications"
-            android:background="?android:attr/selectableItemBackground"
-            android:contentDescription="Notifications"
-            android:tint="#FFFFFF"
-            android:scaleType="fitCenter"/>
-
-        <TextView
-            android:id="@+id/text_notifications"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Notifications"
-            android:textColor="#FFFFFF"
-            android:textSize="12sp"
             android:gravity="center"
-            android:layout_marginTop="4dp" />
-    </LinearLayout>
+            android:orientation="vertical"
+            android:padding="5dp">
 
-    <!-- Botão Configurações com Label -->
-    <LinearLayout
-        android:layout_width="0dp"
-        android:layout_height="match_parent"
-        android:layout_weight="1"
-        android:orientation="vertical"
-        android:gravity="center"
-        android:padding="5dp">
+            <ImageButton
+                android:id="@+id/button_notifications"
+                android:layout_width="wrap_content"
+                android:layout_height="0dp"
+                android:layout_weight="1"
+                android:background="?android:attr/selectableItemBackground"
+                android:contentDescription="Notifications"
+                android:scaleType="fitCenter"
+                android:src="@drawable/ic_notifications"
+                android:tint="#FFFFFF" />
 
-        <ImageButton
-            android:id="@+id/button_settings"
-            android:layout_width="wrap_content"
-            android:layout_height="0dp"
+            <TextView
+                android:id="@+id/text_notifications"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="4dp"
+                android:gravity="center"
+                android:text="Notifications"
+                android:textColor="#FFFFFF"
+                android:textSize="12sp" />
+        </LinearLayout>
+
+        <!-- Botão Configurações com Label -->
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
             android:layout_weight="1"
-            android:src="@drawable/ic_settings"
-            android:background="?android:attr/selectableItemBackground"
-            android:contentDescription="Settings"
-            android:tint="#FFFFFF"
-            android:scaleType="fitCenter"/>
-
-        <TextView
-            android:id="@+id/text_settings"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Settings"
-            android:textColor="#FFFFFF"
-            android:textSize="12sp"
             android:gravity="center"
-            android:layout_marginTop="4dp" />
-    </LinearLayout>
+            android:orientation="vertical"
+            android:padding="5dp">
+
+            <ImageButton
+                android:id="@+id/button_settings"
+                android:layout_width="wrap_content"
+                android:layout_height="0dp"
+                android:layout_weight="1"
+                android:background="?android:attr/selectableItemBackground"
+                android:contentDescription="Settings"
+                android:scaleType="fitCenter"
+                android:src="@drawable/ic_settings"
+                android:tint="#FFFFFF" />
+
+            <TextView
+                android:id="@+id/text_settings"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="4dp"
+                android:gravity="center"
+                android:text="Settings"
+                android:textColor="#FFFFFF"
+                android:textSize="12sp" />
+        </LinearLayout>
 
     </LinearLayout>
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginStart="30dp"
+        android:layout_marginTop="40dp"
+        android:text="Definições"
+        android:textSize="40dp"
+        android:textStyle="bold"
+        android:textColor="#FFF" />
+
+    <TextView
+        android:id="@+id/textView2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginStart="30dp"
+        android:layout_marginTop="180dp"
+        android:text="Notificações"
+        android:textColor="#FFFFFF"
+        android:textSize="20dp" />
+
+    <TextView
+        android:id="@+id/textView6"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginStart="30dp"
+        android:layout_marginTop="250dp"
+        android:text="Tipo de Alertas"
+        android:textStyle="bold"
+        android:textColor="#FFFFFF"
+        android:textSize="22dp" />
+
+    <TextView
+        android:id="@+id/textView3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/textView6"
+        android:layout_alignParentStart="true"
+        android:layout_marginStart="30dp"
+        android:layout_marginTop="33dp"
+        android:text="Alerta contra incêndios"
+        android:textColor="#FFFFFF"
+        android:textSize="18dp" />
+
+    <TextView
+        android:id="@+id/textView4"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/textView3"
+        android:layout_alignParentStart="true"
+        android:layout_marginStart="30dp"
+        android:layout_marginTop="20dp"
+        android:text="Alerta contra inundações"
+        android:textColor="#FFFFFF"
+        android:textSize="18dp" />
+
+    <TextView
+        android:id="@+id/textView5"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/textView4"
+        android:layout_alignParentStart="true"
+        android:layout_marginStart="30dp"
+        android:layout_marginTop="20dp"
+        android:text="Alerta contra tempestades"
+        android:textColor="#FFFFFF"
+        android:textSize="18dp" />
+
+    <View
+        android:id="@+id/view"
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:layout_below="@id/textView2"
+        android:layout_marginLeft="30dp"
+        android:layout_marginTop="18dp"
+        android:layout_marginRight="30dp"
+        android:background="#FFFFFF" />
+
+    <Switch
+        android:id="@+id/notification_switch"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginTop="180dp"
+        android:layout_marginEnd="30dp"
+        android:switchMinWidth="55dp"
+        android:switchPadding="20dp"
+        android:textColor="#FFFFFF"
+        android:track="@drawable/track_selector"
+        android:thumb="@drawable/custom_thumb" />
+
+    <Switch
+        android:id="@+id/notification_switch2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/notification_switch3"
+        android:layout_alignParentEnd="true"
+        android:layout_marginTop="15dp"
+        android:layout_marginEnd="31dp"
+        android:switchMinWidth="55dp"
+        android:switchPadding="20dp"
+        android:textColor="#FFFFFF"
+        android:thumb="@drawable/custom_thumb"
+        android:track="@drawable/track_selector" />
+
+    <Switch
+        android:id="@+id/notification_switch4"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/notification_switch2"
+        android:layout_alignParentEnd="true"
+        android:layout_marginTop="15dp"
+        android:layout_marginEnd="30dp"
+        android:switchMinWidth="55dp"
+        android:switchPadding="20dp"
+        android:textColor="#FFFFFF"
+        android:thumb="@drawable/custom_thumb"
+        android:track="@drawable/track_selector" />
+
+    <Switch
+        android:id="@+id/notification_switch3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/textView6"
+        android:layout_alignParentEnd="true"
+        android:layout_marginTop="31dp"
+        android:layout_marginEnd="30dp"
+        android:switchMinWidth="55dp"
+        android:switchPadding="20dp"
+        android:textColor="#FFFFFF"
+        android:thumb="@drawable/custom_thumb"
+        android:track="@drawable/track_selector" />
 
 
 </RelativeLayout>
