--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -247,5 +247,16 @@
         android:thumb="@drawable/custom_thumb"
         android:track="@drawable/track_selector" />
 
+    <Spinner
+        android:id="@+id/spinner"
+        android:layout_width="200dp"
+        android:layout_height="30dp"
+        android:spinnerMode="dropdown"
+        android:layout_marginTop="16dp"
+        android:layout_below="@+id/textView5"
+        android:textColor="#FFFFFF"
+        android:layout_gravity="center"
+        android:layout_marginLeft="100dp"
+        />
 
 </RelativeLayout>
