--- a/app/src/main/res/layout/activity_notifications.xml
+++ b/app/src/main/res/layout/activity_notifications.xml
@@ -17,12 +17,35 @@
         android:layout_centerHorizontal="true"
         android:layout_marginTop="16dp" />
 
+    <TextView
+        android:id="@+id/textView8"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/not_reg"
+        android:layout_alignParentStart="true"
+        android:layout_marginStart="30dp"
+        android:layout_marginTop="20dp"
+        android:text="Seleciona o teu distrito: "
+        android:textColor="#FFFFFF"
+        android:textSize="18dp" />
 
+
+    <Spinner
+        android:id="@+id/spinner"
+        android:layout_width="200dp"
+        android:layout_height="30dp"
+        android:spinnerMode="dropdown"
+        android:layout_marginTop="16dp"
+        android:layout_below="@+id/textView8"
+        android:textColor="#FFFFFF"
+        android:layout_gravity="center"
+        android:layout_marginLeft="100dp"
+        />
     <TextView
         android:id="@+id/not_reg"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="regiao"
+        android:text=" "
         android:textSize="17sp"
         android:layout_below="@id/notifications_title"
         android:textStyle="bold"
@@ -35,7 +58,7 @@
             android:id="@+id/notifications_container"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_below="@id/not_reg"
+            android:layout_below="@id/spinner"
             android:layout_above="@+id/bottom_navigation"
             android:layout_marginTop="16dp"
             android:padding="16dp">
@@ -43,7 +66,7 @@
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/warningsRecyclerView"
                 android:layout_width="match_parent"
-                android:layout_height="703dp"
+                android:layout_height="600dp"
                 android:padding="16dp" />
 
         </LinearLayout>
