--- a/app/src/main/res/layout/item_warning.xml
+++ b/app/src/main/res/layout/item_warning.xml
@@ -3,6 +3,7 @@
     android:layout_height="wrap_content"
     android:background="@drawable/rounded_background"
     android:padding="12dp"
+    android:layout_margin="5dp"
     android:orientation="vertical">
 
     <TextView
